# xcvm-cosmwasm

contracts/: README.md
contracts/xcvm/: Cargo.toml
contracts/xcvm/examples/: schema.rs
contracts/xcvm/schema/: composable_msg.json  execute_msg.json
contracts/xcvm/src/: contract.rs  msg.rs  state.rs
