[package]
name = "xcvm"
version = "0.0.0"
authors = ["Hussein Ait Lahcen <hussein@composable.finance>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true

[features]
# Add feature "cranelift" to default if you need 32 bit or ARM support
default = []
# Use cranelift backend instead of singlepass. This is required for development on 32 bit or ARM machines.
cranelift = ["cosmwasm-vm/cranelift"]
# For quicker tests, cargo test --lib. for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
cosmwasm-std = { path = "../../packages/std", default-features = false }
rust-argon2 = "0.8"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
sha2 = "0.9.1"
thiserror = "1.0"
hex = { version = "0.4", default-features = false }
xcvm-core = { git = "https://github.com/ComposableFi/composable", rev = "82f39605fb8c06bfd4e45672dbbd6fd6ae09ddb6", default-features = false, features = [
    "std",
] }
xcvm-protocols = { git = "https://github.com/ComposableFi/composable", rev = "82f39605fb8c06bfd4e45672dbbd6fd6ae09ddb6", default-features = false }
ethabi = { version = "17.1.0", default-features = false }
ethereum-types = { version = "0.13.1", default-features = false }

[dev-dependencies]
cosmwasm-schema = { path = "../../packages/schema" }
cosmwasm-storage = { path = "../../packages/storage", default-features = false }
cosmwasm-vm = { path = "../../packages/vm", default-features = false }
